@startuml

class UserInterface
{
    Sensor sensors[]
    
    void UpdateSensors()
}
abstract class Sensor
{
    TMP_Text text

    void UpdateSensors()
}
class PositionSensor
class HumiditySensor
class IlluminationSensor
class TemperatureSensor

Sensor <|-- PositionSensor
Sensor <|-- HumiditySensor
Sensor <|-- IlluminationSensor
Sensor <|-- TemperatureSensor

UserInterface o-- Sensor

@enduml